# sybil-shield

./: .dockerignore  .gitignore  Dockerfile  README.md  REPORT.md  app.py  briq-merged.json  filter.py  fly.toml  notebook.ipynb  pyproject.toml  result.json  sybildetection_script.py  test_notebook.ipynb
app/: __init__.py
app/controllers/: main.py
app/models/: __init__.py  base.py  indexer.py  script.py
app/models/briq/: __init__.py  briq.json  briq_l2.json  layer-2-script.py  script.py
app/models/starknetid/: __init__.py  layer1.py  layer2.py
app/models/sybildetection1/: __init__.py  base.py
app/views/: __init__.py  address.py  base.py
