[tool.poetry]
name = "sybil-shield-1"
version = "0.1.0"
description = "Packages for Sybil Detection Software"
authors = ["Marissa Posner"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
flask = "^2.2.2"
waitress = "^2.1.2"
pandas = "^1.5.3"
networkx = "^3.0"
seaborn = "^0.12.2"
numpy = "^1.24.1"

[tool.poetry.dev-dependencies]
apibara = { version = "^0.6.0", extras = ["indexer"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
